--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ backports.ssl-match-hostname==3.4.0.2
 certifi==2016.9.26
 cffi==1.8.3
 cryptography==1.5.2
+dj-static==0.0.6
 Django==1.10.2
 django-braces==1.10.0
 django-oauth-toolkit==0.10.0
@@ -21,5 +22,6 @@ pytest==2.7.0
 python-dateutil==2.4.2
 requests==2.6.0
 six==1.9.0
+static3==0.7.0
 urllib3==1.18
 websocket-client==0.29.0
