--- a/requirements.txt
+++ b/requirements.txt
@@ -20,8 +20,11 @@ pycparser==2.16
 pyOpenSSL==16.2.0
 pytest==2.7.0
 python-dateutil==2.4.2
+python-memcached==1.58
 requests==2.6.0
+selenium==3.0.1
 six==1.9.0
 static3==0.7.0
+tblib==1.3.0
 urllib3==1.18
 websocket-client==0.29.0
