--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ japps/migrations/0003_auto_20161017_1106.py
 japps/migrations/0003_auto_20161017_1106.pyc
 .env
 .keyfile
+et 362886c7f3489016d5b2b910287e169197769e47
+geckodriver.log
+japps/static/japps/.sass-cache/
+japps/static/japps/sass_extension.css.map
