--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ et 362886c7f3489016d5b2b910287e169197769e47
 geckodriver.log
 japps/static/japps/.sass-cache/
 japps/static/japps/sass_extension.css.map
+japps/migrations/0004_auto_20161129_1546.py
+japps/migrations/0004_auto_20161129_1546.pyc
