--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ japps/static/japps/.sass-cache/
 japps/static/japps/sass_extension.css.map
 japps/migrations/0004_auto_20161129_1546.py
 japps/migrations/0004_auto_20161129_1546.pyc
+local_client
