--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ japps/static/japps/sass_extension.css.map
 japps/migrations/0004_auto_20161129_1546.py
 japps/migrations/0004_auto_20161129_1546.pyc
 local_client
+.local_client.swp
