--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ japps/migrations/0004_auto_20161129_1546.py
 japps/migrations/0004_auto_20161129_1546.pyc
 local_client
 .local_client.swp
+.development
+.production
+
