--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ pycparser==2.16
 pyOpenSSL==16.2.0
 pytest==2.7.0
 python-dateutil==2.4.2
+python-magic==0.4.12
 python-memcached==1.58
 requests==2.6.0
 selenium==3.0.1
