--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ local_client
 .development
 .production
 japps/migrations/*.pyc
+japps/migrations/0001_initial.pyc
+japps/migrations/0002_auto_20161013_1049.pyc
+japps/migrations/__init__.pyc
+
