--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,4 @@ japps/migrations/*.pyc
 japps/migrations/0001_initial.pyc
 japps/migrations/0002_auto_20161013_1049.pyc
 japps/migrations/__init__.pyc
-
+japps/static/japps/filepreview.js
