--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ certifi==2016.9.26
 cffi==1.8.3
 cryptography==1.5.2
 dj-static==0.0.6
-Django==1.11.20
+Django==1.11.24
 django-braces==1.10.0
 django-oauth-toolkit==0.10.0
 django-parsley==0.6
@@ -29,4 +29,13 @@ static3==0.7.0
 tblib==1.3.0
 urllib3==1.24.2
 websocket-client==0.29.0
+Jinja2==2.10.1
+backports.ssl-match-hostname==3.4.0.2
+py==1.4.26
+pytest==2.7.0
+python-dateutil==2.4.2
+requests==2.20.0
+six==1.9.0
+websocket-client==0.29.0
+wsgiref==0.1.2
 
