--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ chardet==3.0.4
 cryptography==2.8
 dj-static==0.0.6
 django==2.2.10
+django-suit==0.2.13
 django-braces==1.10.0
 django-oauth-toolkit==0.10.0
 django-parsley==0.7
