--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ ipaddress==1.0.17
 Jinja2==2.10.1
 MarkupSafe==0.23
 oauthlib==1.0.3
-oauth2-provider==0.0
+oauth2-provider
 parsley==1.3
 py==1.4.26
 pyasn1==0.1.9
