--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ cffi==1.8.3
 chardet==3.0.4
 cryptography==2.8
 dj-static==0.0.6
-django==2.2.10
+django==1.11.28
 django-suit==0.2.13
 django-braces==1.10.0
 django-oauth-toolkit==0.10.0
@@ -16,6 +16,7 @@ ipaddress==1.0.17
 Jinja2==2.10.1
 MarkupSafe==0.23
 oauthlib==1.0.3
+oauth2_provider
 parsley==1.3
 py==1.4.26
 pyasn1==0.1.9
